--- a/style.css
+++ b/style.css
@@ -93,6 +93,15 @@ input[type="text"]:focus {
   margin-top: 50px;
 }
 
+.todo-item input {
+  margin-right: 10px;
+}
+
+.todo-completed label {
+  text-decoration: line-through;
+  color: #cecaca;
+}
+
 .btn-add {
   border-radius: 0 4px 4px 0;
 }
